# nebula

./: Makefile
apps/generic-event-producer/: Cargo.toml  Makefile
apps/generic-event-producer/src/: main.rs  notifier.rs
apps/text-generator-service/: .gitignore  Makefile  pyproject.toml
apps/text-generator-service/app/: client.py  server.py  text_generator.proto  text_generator_pb2.py  text_generator_pb2_grpc.py
apps/text-generator-service/app/controllers/: text_generator.py
apps/text-generator-service/app/services/: model.py
src/python/nebula-src/: .flake8  Makefile  README.md  pyproject.toml
src/python/nebula-src/nebula_src/models/gpt/: __init__.py  generate.py  model.py  train.py
src/python/nebula-src/nebula_src/models/serializers/: keras.py
src/python/nebula-src/nebula_src/models/typing/: __init__.py
src/python/nebula-src/scripts/: train_and_generate_mini_gpt.py
