[tool.black]
line-length = 125
skip-string-normalization = true

[tool.poetry]
name = "nebula-src"
version = "0.1.0"
description = ""
authors = ["Kevin Yu <kevin.yu.404@gmail.com>"]
readme = "README.md"
packages = [{include = "nebula_src"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
numpy = "^1.24.2"
keras = "^2.11.0"
tensorflow = "^2.11.0"


[tool.poetry.group.dev.dependencies]
radon = "^5.1.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
